# task_challenge

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  database.db  db_instructions.md  docker-compose.production.yml  docker-compose.yml  entrypoint.sh  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  ui.py
.github/workflows/: ci.yml
alembic/: README  env.py
alembic/versions/: 404af90b75eb_recuperando_migrations.py  5221075fb90b_criando_tabela_inicial.py
app/: db.py  events.py  logger.py  main.py  schemas.py  services.py  settings.py  wait_for_db.py
app/auth/: auth_ui.py  current_user.py  router.py  schemas.py  security.py
app/routers/: task_api_router.py  task_router.py  task_ui_router.py
app/static/css/: styles.css  styles.css.map
app/static/sass/: styles.scss
app/templates/: base.html  create_todo.html  index.html  login.html  todos.html
app/templates/components/: create_user.html  navbar.html
app/test/: conftest.py
app/test/factories/: todo.py
app/test/test_todo/: test_todo_endpoints.py
app/tests/: conftest.py  test_security.py
app/tests/factories/: todo.py  users.py
app/tests/test_auth/: test_login.py  test_security.py
app/tests/test_todo/: test_todo_endpoints.py
app/tests/test_users/: test_users_endpoints.py
app/todo/: models.py  router.py  schemas.py  services.py  subscribers.py  ui.py
app/user/: models.py  router.py  schemas.py  services.py
compose/development/: Dockerfile
compose/production/: Dockerfile
test/: conftest.py
test/test_todo/: test_todo_endpoints.py
