[project]
name = "task-challenge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.2",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]
[tool.pytest.ini_options]
addopts = " -p no:warnings -vv --cov=app --cov-report=term-missing --cov-report=html --cov-fail-under=9'0"
testpaths = ["app/tests", "tests"]
pythonpath = "."

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-factoryboy>=2.7.0",
]
